cabal-version:  2.2
name:           gm-gene
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/gm-gene#readme>
homepage:       https://github.com/githubuser/gm-gene#readme
bug-reports:    https://github.com/githubuser/gm-gene/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/gm-gene

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , array
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      Chess
      ChessParser
      ChessPlay
      ChessSimpleAI
      GameAI
      Parser
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
  hs-source-dirs:
      src

executable gm-gene-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      gm-gene


test-suite gm-gene-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      gm-gene

